[tool.poetry]
name = "convlstm_pytorch"
version = "0.1.0"
description = "A PyTorch implementation for convolutional LSTM"
authors = ["Andrea Palazzi", "Jiayu Liu <jiayu@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"
isort = "^5.6.3"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
